# pretty-verifier

./: .gitignore  LICENSE  NOTICE  README.md  error_managers.py  full_mode.py  generate_bpf_loader.py  generate_loader.py  handler.py  pretty_verifier.py  pyproject.toml  test.py  utils.py
lib/: CMakeLists.txt
lib/go/: go.mod  pretty_verifier.go
lib/include/: pretty_verifier.h
lib/rust/pretty-verifier/: Cargo.toml  build.rs
lib/rust/pretty-verifier/src/: lib.rs
lib/src/: pretty_verifier.c
src/pretty_verifier/: __init__.py  error_managers.py  full_mode.py  generate_loader.py  handler.py  llm.py  main.py  utils.py
tests/: README.md  test.py
tests/ebpf-generator/: .gitignore  Makefile  README.md  breaker.go  brf.go  brf_legacy.go  brf_prog.go  brf_types.go  go.mod  go.sum
tests/ebpf-generator/buildroot/: README.md  compare-pretty-logs.py  run.sh  setup-buildroot.sh  start-qemu.sh
tests/ebpf-generator/fuzzed-tests/: .gitignore  0_stats.csv  Makefile  counts.txt  excluded_tests.txt  generate_ouput.py  get_stats.py  load.sh  prog_000.c  prog_001.c  prog_002.c  prog_003.c  prog_004.c  prog_005.c  prog_006.c  prog_007.c  prog_008.c  prog_009.c  prog_010.c  prog_011.c  prog_012.c  prog_013.c  prog_014.c  prog_015.c  prog_016.c  prog_017.c  prog_018.c  prog_019.c  prog_020.c  prog_021.c  prog_022.c  prog_023.c  prog_024.c  prog_025.c  prog_026.c  prog_027.c  prog_028.c  prog_029.c  prog_030.c  prog_031.c  (+432 more)
tests/ebpf-generator/multikernel/: .gitignore  README.md  compare-pretty-logs.py  run.sh  setup-buildroot.sh  start-qemu.sh
tests/ebpf-generator/pretty-verifier/: .gitignore  Makefile  pyproject.toml
tests/ebpf-generator/pretty-verifier/lib/go/: pretty_verifier.go
tests/ebpf-generator/pretty-verifier/src/pretty_verifier/: generate_loader.py  handler.py
tests/ebpf-generator/pretty-verifier/tests/: README.md
tests/lib/c/: test.bpf.c  test.c
tests/lib/go/: .gitignore  Makefile  go.mod  go.sum  main.go
tests/lib/rust/: Cargo.toml
tests/lib/rust/src/: main.rs
tests/libs/: Makefile  test.c
tests/test_cases/: .gitignore  bitwise_operator_on_pointer_or.bpf.c  bitwise_operator_on_pointer_xor.bpf.c  bpf_program_too_large.bpf.c  combined_stack_size_exceeded.bpf.c  full.sh  func_supported_only_for_fentry.bpf.c  gpl_delcaration_missing.bpf.c  helper_might_sleep.bpf.c  invalid_mem_access_null_ptr_to_mem.bpf.c  invalid_size_of_register_spill.bpf.c  invalid_variable_offset_read_from_stack.bpf.c  kernel_subsystem_misconfigured_verifier.bpf.c  kfunc_require_gpl_program.bpf.c  load.sh  max_value_is_outside_map_value.bpf.c  min_value_is_outside_map_value.bpf.c  offset_outside_packet.bpf.c  pointer_arithmetic_null_check.bpf.c  pointer_arithmetic_prohibited_map_ptr.bpf.c  pointer_arithmetic_prohibited_sock_ptr.bpf.c  pointer_arithmetic_with_operator_division.bpf.c  pointer_arithmetic_with_operator_left_shift.bpf.c  pointer_arithmetic_with_operator_module.bpf.c  reg_not_ok.bpf.c  tail_calls_not_allowed_if_frame_size_exceeded.bpf.c  type_mismatch.bpf.c  unknown_func.bpf.c  verbose_invalid_scalar.bpf.c  xdp_helpers_multiple_files.c  xdp_prog_multiple_files.c
(+27 files in other folders)
